--- a/index.html
+++ b/index.html
@@ -67,6 +67,59 @@
 					<div class="container">
 						<div class="row">
 							<div class="grid-2" style="height:200px; line-height:200px; ">
+								<img src="img/groupdiff_eccv24.png" style="display: inline-block; vertical-align: middle;">
+							</div>
+							<div class="grid-4">
+								<h3>GroupDiff: Diffusion-based Group Portrait Editing</h3>
+								<p>Yuming Jiang, Nanxuan Zhao, Qing Liu, Krishna kumar Singh, Shuai Yang, Chen Change Loy, Ziwei Liu</p>
+								<p><i>European Conference on Computer Vision (ECCV), 2024</i></p>
+								<br>
+								<a href="https://arxiv.org/abs/2409.14379">arXiv</a>
+							</div>
+						</div>
+					</div>
+					<br>
+					<br>
+					<br>
+					<br>
+					<div class="container">
+						<div class="row">
+							<div class="grid-2" style="height:200px; line-height:200px; ">
+								<img src="img/swapanything_eccv24.png" style="display: inline-block; vertical-align: middle;">
+							</div>
+							<div class="grid-4">
+								<h3>SwapAnything: Enabling Arbitrary Object Swapping in Personalized Image Editing</h3>
+								<p>Jing Gu, Nanxuan Zhao, Wei Xiong, Qing Liu, Zhifei Zhang, He Zhang, Jianming Zhang, HyunJoon Jung, Yilin Wang, Xin Eric Wang</p>
+								<p><i>European Conference on Computer Vision (ECCV), 2024</i></p>
+								<br>
+								<a href="https://swap-anything.github.io/">Project</a>
+								<a href="https://arxiv.org/abs/2404.05717">arXiv</a>
+								<a href="https://github.com/eric-ai-lab/swap-anything">Code</a>
+							</div>
+						</div>
+					</div>
+					<br>
+					<br>
+					<div class="container">
+						<div class="row">
+							<div class="grid-2" style="height:200px; line-height:200px; ">
+								<img src="img/gslrm_eccv2024.gif" style="display: inline-block; vertical-align: middle;">
+							</div>
+							<div class="grid-4">
+								<h3>GS-LRM: Large Reconstruction Model for 3D Gaussian Splatting</h3>
+								<p>Kai Zhang, Sai Bi, Hao Tan, Yuanbo Xiangli, Nanxuan Zhao, Kalyan Sunkavalli, Zexiang Xu</p>
+								<p><i>European Conference on Computer Vision (ECCV), 2024</i></p>
+								<br>
+								<a href="https://sai-bi.github.io/project/gs-lrm/">Project</a>
+								<a href="https://arxiv.org/abs/2404.19702">arXiv</a>
+							</div>
+						</div>
+					</div>
+					<br>
+					<br>
+					<div class="container">
+						<div class="row">
+							<div class="grid-2" style="height:200px; line-height:200px; ">
 								<img src="img/t2v_sig24.png" style="display: inline-block; vertical-align: middle;">
 							</div>
 							<div class="grid-4">
@@ -84,14 +137,14 @@
 					<div class="container">
 						<div class="row">
 							<div class="grid-2" style="height:200px; line-height:200px; ">
-								<img src="img/sig24.jpeg" style="display: inline-block; vertical-align: middle;">
+								<img src="img/LuoEtAl-IntrinsicDiffusion-SIGGRAPH2024-thumbnail.png" style="display: inline-block; vertical-align: middle;">
 							</div>
 							<div class="grid-4">
 								<h3>IntrinsicDiffusion: Joint Intrinsic Layers From Latent Diffusion Models</h3>
 								<p>Jundan Luo, Duygu Ceylan, Jae Shin Yoon, Nanxuan Zhao, Julien Philip, Anna Frühstück, Wenbin Li, Christian Richardt, Tuanfeng Wang</p>
 								<p><i>Siggraph 2024</i></p>
 								<br>
-								<a href="#">Coming soon ...</a>
+								<a href="https://intrinsicdiffusion.github.io/">Project</a>
 							</div>
 						</div>
 					</div>
@@ -112,6 +165,9 @@
 							</div>
 						</div>
 					</div>
+					<br>
+					<br>
+					<br>
 					<br>
 					<br>
 					<div class="container">
