--- a/index.html
+++ b/index.html
@@ -62,6 +62,105 @@
 						<strong>Selected Publications</strong>
 					</span>
 					</div>
+
+
+
+
+
+					<br>
+					<br>
+					<div class="container">
+						<div class="row">
+							<div class="grid-2" style="height:200px; line-height:200px; ">
+								<img src="img/sig25_3dfixup.gif" style="display: inline-block; vertical-align: middle;">
+							</div>
+							<div class="grid-4">
+								<h3>3D-Fixup: Advancing Photo Editing with 3D Priors</h3>
+								<p>Yen-Chi Cheng, Krishna Kumar Singh, Jae Shin Yoon, Alex Schwing, Liangyan Gui, Matheus Gadelha, Paul Guerrero, <strong>Nanxuan Zhao</strong></p>
+								<p><i>Siggraph 2025</i></p>
+								<br>
+								<a href="https://3dfixup.github.io/">Project</a>
+								<a href="https://arxiv.org/abs/2505.10566">arXiv</a>
+							</div>
+						</div>
+					</div>
+					<br>
+					<br>
+					<br>
+					<br>
+					<div class="container">
+						<div class="row">
+							<div class="grid-2" style="height:200px; line-height:200px; ">
+								<img src="img/sig25_svgstyle.png" style="display: inline-block; vertical-align: middle;">
+							</div>
+							<div class="grid-4">
+								<h3>Style Customization of Text-to-Vector Generation with Image Diffusion Priors</h3>
+								<p>Peiying Zhang, <strong>Nanxuan Zhao</strong>, Jing Liao</p>
+								<p><i>Siggraph 2025</i></p>
+								<br>
+								<a href="https://customsvg.github.io/">Project</a>
+								<a href="https://arxiv.org/abs/2505.10558">arXiv</a>
+							</div>
+						</div>
+					</div>
+					<br>
+					<br>
+					<br>
+					<br>
+					<div class="container">
+						<div class="row">
+							<div class="grid-2" style="height:200px; line-height:200px; ">
+								<img src="img/motionbridge.gif" style="display: inline-block; vertical-align: middle;">
+							</div>
+							<div class="grid-4">
+								<h3>MotionBridge: Dynamic Video Inbetweening with Flexible Controls</h3>
+								<p>Maham Tanveer, Yang Zhou, Simon Niklaus, Ali Mahdavi Amiri, Hao Zhang, Krishna Kumar Singh, <strong>Nanxuan Zhao</strong></p>
+								<br>
+								<a href="https://motionbridge.github.io/">Project</a>
+								<a href="https://arxiv.org/abs/2412.13190">arXiv</a>
+							</div>
+						</div>
+					</div>
+					<br>
+					<br>
+					<br>
+					<br>
+					<div class="container">
+						<div class="row">
+							<div class="grid-2" style="height:200px; line-height:200px; ">
+								<img src="img/cvpr25_UniReal.gif" style="display: inline-block; vertical-align: middle;">
+							</div>
+							<div class="grid-4">
+								<h3>UniReal: Universal Image Generation and Editing via Learning Real-world Dynamics</h3>
+								<p>Xi Chen, Zhifei Zhang, He Zhang, Yuqian Zhou, Soo Ye Kim, Qing Liu, Yijun Li, Jianming Zhang, <strong>Nanxuan Zhao</strong>, Yilin Wang, Hui Ding, Zhe Lin, Hengshuang Zhao</p>
+								<p><i>Computer Vision and Pattern Recognition (CVPR), 2025 <span style="color:red">(Highlight)</span></i></p>
+								<br>
+								<a href="https://xavierchen34.github.io/UniReal-Page/">Project</a>
+								<a href="https://arxiv.org/abs/2412.07774">arXiv</a>
+							</div>
+						</div>
+					</div>
+					<br>
+					<br>
+					<br>
+					<br>
+					<div class="container">
+						<div class="row">
+							<div class="grid-2" style="height:200px; line-height:200px; ">
+								<img src="img/cvpr25_relight.gif" style="display: inline-block; vertical-align: middle;">
+							</div>
+							<div class="grid-4">
+								<h3>Comprehensive Relighting: Generalizable and Consistent Monocular Human Relighting and Harmonization</h3>
+								<p>Junying Wang, Jingyuan Liu, Xin Sun, Krishna Kumar Singh, Zhixin Shu, He Zhang, Jimei Yang, <strong>Nanxuan Zhao</strong>, Tuanfeng Y. Wang, Simon S. Chen, Ulrich Neumann, Jae Shin Yoon</p>
+								<p><i>Computer Vision and Pattern Recognition (CVPR), 2025</i></p>
+								<br>
+								<a href="https://junyingw.github.io/paper/relighting/">Project</a>
+								<a href="https://arxiv.org/abs/2504.03011">arXiv</a>
+							</div>
+						</div>
+					</div>
+					<br>
+					<br>
 					<br>
 					<br>
 					<div class="container">
@@ -71,7 +170,7 @@
 							</div>
 							<div class="grid-4">
 								<h3>GroupDiff: Diffusion-based Group Portrait Editing</h3>
-								<p>Yuming Jiang, Nanxuan Zhao, Qing Liu, Krishna kumar Singh, Shuai Yang, Chen Change Loy, Ziwei Liu</p>
+								<p>Yuming Jiang, <strong>Nanxuan Zhao</strong><sup>#</sup>, Qing Liu, Krishna kumar Singh, Shuai Yang, Chen Change Loy, Ziwei Liu</p>
 								<p><i>European Conference on Computer Vision (ECCV), 2024</i></p>
 								<br>
 								<a href="https://arxiv.org/abs/2409.14379">arXiv</a>
@@ -89,7 +188,7 @@
 							</div>
 							<div class="grid-4">
 								<h3>SwapAnything: Enabling Arbitrary Object Swapping in Personalized Image Editing</h3>
-								<p>Jing Gu, Nanxuan Zhao, Wei Xiong, Qing Liu, Zhifei Zhang, He Zhang, Jianming Zhang, HyunJoon Jung, Yilin Wang, Xin Eric Wang</p>
+								<p>Jing Gu, <strong>Nanxuan Zhao</strong>, Wei Xiong, Qing Liu, Zhifei Zhang, He Zhang, Jianming Zhang, HyunJoon Jung, Yilin Wang, Xin Eric Wang</p>
 								<p><i>European Conference on Computer Vision (ECCV), 2024</i></p>
 								<br>
 								<a href="https://swap-anything.github.io/">Project</a>
@@ -107,7 +206,7 @@
 							</div>
 							<div class="grid-4">
 								<h3>GS-LRM: Large Reconstruction Model for 3D Gaussian Splatting</h3>
-								<p>Kai Zhang, Sai Bi, Hao Tan, Yuanbo Xiangli, Nanxuan Zhao, Kalyan Sunkavalli, Zexiang Xu</p>
+								<p>Kai Zhang, Sai Bi, Hao Tan, Yuanbo Xiangli, <strong>Nanxuan Zhao</strong>, Kalyan Sunkavalli, Zexiang Xu</p>
 								<p><i>European Conference on Computer Vision (ECCV), 2024</i></p>
 								<br>
 								<a href="https://sai-bi.github.io/project/gs-lrm/">Project</a>
@@ -124,7 +223,7 @@
 							</div>
 							<div class="grid-4">
 								<h3>Text-to-vector Generation With Neural Path Representation</h3>
-								<p>Peiying Zhang, Nanxuan Zhao, Jing Liao</p>
+								<p>Peiying Zhang, <strong>Nanxuan Zhao</strong>, Jing Liao</p>
 								<p><i>ACM Transactions on Graphics (Proc. SIGGRAPH 2024)</i></p>
 								<br>
 								<a href="https://intchous.github.io/T2V-NPR/">Project</a>
@@ -141,7 +240,7 @@
 							</div>
 							<div class="grid-4">
 								<h3>IntrinsicDiffusion: Joint Intrinsic Layers From Latent Diffusion Models</h3>
-								<p>Jundan Luo, Duygu Ceylan, Jae Shin Yoon, Nanxuan Zhao, Julien Philip, Anna Frühstück, Wenbin Li, Christian Richardt, Tuanfeng Wang</p>
+								<p>Jundan Luo, Duygu Ceylan, Jae Shin Yoon, <strong>Nanxuan Zhao</strong>, Julien Philip, Anna Frühstück, Wenbin Li, Christian Richardt, Tuanfeng Wang</p>
 								<p><i>Siggraph 2024</i></p>
 								<br>
 								<a href="https://intrinsicdiffusion.github.io/">Project</a>
@@ -157,7 +256,7 @@
 							</div>
 							<div class="grid-4">
 								<h3>NIVeL: Neural Implicit Vector Layers for Text-to-Vector Generation</h3>
-								<p>Vikas Thamizharasan, Difan Liu, Matthew Fisher, Nanxuan Zhao, Evangelos Kalogerakis, Michal Lukáč</p>
+								<p>Vikas Thamizharasan, Difan Liu, Matthew Fisher, <strong>Nanxuan Zhao</strong>, Evangelos Kalogerakis, Michal Lukáč</p>
 								<p><i>Computer Vision and Pattern Recognition (CVPR), 2024</i></p>
 								<br>
 								<a href="https://vikastmz.github.io/NIVeL/">Project</a>
@@ -177,7 +276,7 @@
 							</div>
 							<div class="grid-4">
 								<h3>Visual Layout Composer: Image-Vector Dual Diffusion Model for Design Layout Generation</h3>
-								<p>Mohammad Amin Shabani, Zhaowen Wang, Difan Liu, Nanxuan Zhao, Jimei Yang, Yasutaka Furukawa</p>
+								<p>Mohammad Amin Shabani, Zhaowen Wang, Difan Liu, <strong>Nanxuan Zhao</strong>, Jimei Yang, Yasutaka Furukawa</p>
 								<p><i>Computer Vision and Pattern Recognition (CVPR), 2024</i></p>
 								<br>
 								<a href="https://aminshabani.github.io/visual_layout_composer/index.html">Project</a>
@@ -193,7 +292,7 @@
 							</div>
 							<div class="grid-4">
 								<h3>Diff-Plugin: Revitalizing Details for Diffusion-based Low-level Tasks</h3>
-								<p>Yuhao Liu, Zhanghan Ke, Fang Liu, Nanxuan Zhao, Rynson W.H. Lau</p>
+								<p>Yuhao Liu, Zhanghan Ke, Fang Liu, <strong>Nanxuan Zhao</strong>, Rynson W.H. Lau</p>
 								<p><i>Computer Vision and Pattern Recognition (CVPR), 2024</i></p>
 								<br>
 								<a href="https://yuhaoliu7456.github.io/Diff-Plugin/">Project</a>
@@ -210,7 +309,7 @@
 							</div>
 							<div class="grid-4">
 								<h3>Personalizing Products with Stylized Head Portraits for Self-Expression</h3>
-								<p>Yang Shi, Yechun Peng, Shengqi Dang, Nanxuan Zhao, Nan Cao</p>
+								<p>Yang Shi, Yechun Peng, Shengqi Dang, <strong>Nanxuan Zhao</strong>, Nan Cao</p>
 								<p><i>ACM Conference on Human Factors in Computing Systems (CHI), 2024</i></p>
 								<br>
 								<a href="https://dl.acm.org/doi/10.1145/3613904.3642391">Paper</a>
@@ -227,7 +326,7 @@
 							</div>
 							<div class="grid-4">
 								<h3>Localizing and Editing Knowledge in Text-to-Image Generative Models</h3>
-								<p>Samyadeep Basu, Nanxuan Zhao, Vlad Morariu, Soheil Feizi, Varun Manjunatha</p>
+								<p>Samyadeep Basu, <strong>Nanxuan Zhao</strong>, Vlad Morariu, Soheil Feizi, Varun Manjunatha</p>
 								<p><i>International Conference on Learning Representations (ICLR) 2023</i></p>
 								<br>
 								<a href="https://arxiv.org/abs/2310.13730">arXiv</a>
@@ -243,7 +342,7 @@
 							</div>
 							<div class="grid-4">
 								<h3>PHOTOSWAP: Personalized Subject Swapping in Images</h3>
-								<p>Jing Gu, Yilin Wang, Nanxuan Zhao, Tsu-Jui Fu, Wei Xiong, Qing Liu, Zhifei Zhang, He Zhang, Jianming Zhang, HyunJoon Jung, Xin Eric Wang</p>
+								<p>Jing Gu, Yilin Wang, <strong>Nanxuan Zhao</strong>, Tsu-Jui Fu, Wei Xiong, Qing Liu, Zhifei Zhang, He Zhang, Jianming Zhang, HyunJoon Jung, Xin Eric Wang</p>
 								<p><i>Conference on Neural Information Processing Systems (NeurIPS) 2023</i></p>
 								<br>
 								<a href="https://arxiv.org/abs/2305.18286">arXiv</a>
@@ -260,7 +359,7 @@
 							</div>
 							<div class="grid-4">
 								<h3>Text-Guided Vector Graphics Customization</h3>
-								<p>Peiying Zhang, Nanxuan Zhao, Jing Liao</p>
+								<p>Peiying Zhang, <strong>Nanxuan Zhao</strong>, Jing Liao</p>
 								<p><i>SIGGRAPH Asia 2023</i></p>
 								<br>
 								<a href="https://arxiv.org/abs/2309.12302">arXiv</a>
@@ -277,7 +376,7 @@
 							</div>
 							<div class="grid-4">
 								<h3>Bring Clipart to Life</h3>
-								<p>Nanxuan Zhao, Shengqi Dang, Hexun Lin, Yang Shi, Nan Cao</p>
+								<p><strong>Nanxuan Zhao</strong>, Shengqi Dang, Hexun Lin, Yang Shi, Nan Cao</p>
 								<p><i>International Conference on Computer Vision (ICCV), 2023</i></p>
 								<br>
 								<a href="https://openaccess.thecvf.com/content/ICCV2023/papers/Zhao_Bring_Clipart_to_Life_ICCV_2023_paper.pdf">PDF</a>
@@ -294,7 +393,7 @@
 							</div>
 							<div class="grid-4">
 								<h3>AssetField: Assets Mining and Reconfiguration in Ground Feature Plane Representation</h3>
-								<p>Yuanbo Xiangli, Linning Xu, Xingang Pan, Nanxuan Zhao, Bo Dai, Dahua Lin</p>
+								<p>Yuanbo Xiangli, Linning Xu, Xingang Pan, <strong>Nanxuan Zhao</strong>, Bo Dai, Dahua Lin</p>
 								<p><i>International Conference on Computer Vision (ICCV), 2023</i></p>
 								<br>
 								<a href="https://arxiv.org/abs/2303.13953">arXiv</a>
@@ -311,7 +410,7 @@
 							</div>
 							<div class="grid-4">
 								<h3>Language-based Photo Color Adjustment for Graphic Designs</h3>
-								<p>Zhenwei Wang<sup>*</sup>, Nanxuan Zhao<sup>*</sup>, Gerhard Hancke, Rynson W.H. Lau</p>
+								<p>Zhenwei Wang<sup>*</sup>, <strong>Nanxuan Zhao</strong><sup>*</sup>, Gerhard Hancke, Rynson W.H. Lau</p>
 								<p><i>ACM Transactions on Graphics (Proc. SIGGRAPH 2023)</i></p>
 								<br>
 								<a href="https://arxiv.org/abs/2308.03059">arXiv</a>
@@ -328,7 +427,7 @@
 							</div>
 							<div class="grid-4">
 								<h3>FashionTex: Controllable Virtual Try-on with Text and Texture</h3>
-								<p>Anran Lin, Nanxuan Zhao, Shuliang Ning, Yuda Qiu, Baoyuan Wang, Xiaoguang Han</p>
+								<p>Anran Lin, <strong>Nanxuan Zhao</strong>, Shuliang Ning, Yuda Qiu, Baoyuan Wang, Xiaoguang Han</p>
 								<p><i>SIGGRAPH 2023</i></p>
 								<br>
 								<a href="https://arxiv.org/abs/2305.04451">arXiv</a>
@@ -344,7 +443,7 @@
 							</div>
 							<div class="grid-4">
 								<h3>Neural Preset for Color Style Transfer</h3>
-								<p>Zhanghan Ke, Yuhao Liu, Lei Zhu, Nanxuan Zhao, Rynson W.H. Lau</p>
+								<p>Zhanghan Ke, Yuhao Liu, Lei Zhu, <strong>Nanxuan Zhao</strong>, Rynson W.H. Lau</p>
 								<p><i>Computer Vision and Pattern Recognition (CVPR), 2023</i></p>
 								<br>
 								<a href="https://arxiv.org/abs/2303.13511">arXiv</a>
@@ -364,7 +463,7 @@
 							</div>
 							<div class="grid-4">
 								<h3>Grid-guided Neural Radiance Fields for Large Urban Scenes</h3>
-								<p>Linning Xu, Yuanbo Xiangli, Sida Peng, Xingang Pan, Nanxuan Zhao, Christian Theobalt, Bo Dai, Dahua Lin</p>
+								<p>Linning Xu, Yuanbo Xiangli, Sida Peng, Xingang Pan, <strong>Nanxuan Zhao</strong>, Christian Theobalt, Bo Dai, Dahua Lin</p>
 								<p><i>Computer Vision and Pattern Recognition (CVPR), 2023</i></p>
 								<br>
 								<a href="https://arxiv.org/abs/2303.14001">arXiv</a>
@@ -381,7 +480,7 @@
 							</div>
 							<div class="grid-4">
 								<h3>UniColor: A Unified Framework for Multi-Modal Colorization with Transformer</h3>
-								<p>Zhitong Huang<sup>*</sup>, Nanxuan Zhao<sup>*</sup>, Jing Liao</p>
+								<p>Zhitong Huang<sup>*</sup>, <strong>Nanxuan Zhao</strong><sup>*</sup>, Jing Liao</p>
 								<p><i>ACM Transactions on Graphics (Proc. SIGGRAPH Asia 2022)</i></p>
 								<br>
 								<a href="https://arxiv.org/abs/2209.11223">arXiv</a>
@@ -399,7 +498,7 @@
 							</div>
 							<div class="grid-4">
 								<h3>Make Your Own Sprites: Aliasing-Aware and Cell-Controllable Pixelization</h3>
-								<p>Zongwei Wu, Liangyu Chai, Nanxuan Zhao, Bailin Deng, Yongtuo Liu, Qiang Wen, Junle Wang, and Shengfeng He</p>
+								<p>Zongwei Wu, Liangyu Chai, <strong>Nanxuan Zhao</strong>, Bailin Deng, Yongtuo Liu, Qiang Wen, Junle Wang, and Shengfeng He</p>
 								<p><i>ACM Transactions on Graphics (Proc. SIGGRAPH Asia 2022)</i></p>
 								<br>
 								<a href="./projects/pixelization/pixelization_siga22.pdf">Paper</a>
@@ -416,7 +515,7 @@
 							</div>
 							<div class="grid-4">
 								<h3>BungeeNeRF: Progressive Neural Radiance Field for Extreme Multi-scale Scene Rendering</h3>
-								<p>Yuanbo Xiangli<sup>*</sup>, Linning Xu<sup>*</sup>, Xingang Pan, Nanxuan Zhao, Anyi Rao, Christian Theobalt, Bo Dai, and Dahua Lin</p>
+								<p>Yuanbo Xiangli<sup>*</sup>, Linning Xu<sup>*</sup>, Xingang Pan, <strong>Nanxuan Zhao</strong>, Anyi Rao, Christian Theobalt, Bo Dai, and Dahua Lin</p>
 								<p><i>European Conference on Computer Vision (ECCV), 2022</i></p>
 								<br>
 								<a href="https://arxiv.org/abs/2112.05504">arxiv</a>
@@ -434,7 +533,7 @@
 							</div>
 							<div class="grid-4">
 								<h3>TransRank: Self-supervised Video Representation Learning via Ranking-based Transformation Recognition</h3>
-								<p>Haodong Duan, Nanxuan Zhao<sup>#</sup>, Kai Chen, Dahua Lin</p>
+								<p>Haodong Duan, <strong>Nanxuan Zhao</strong><sup>#</sup>, Kai Chen, Dahua Lin</p>
 								<p><i>Computer Vision and Pattern Recognition (CVPR), 2022 <span style="color:red">(Oral)</span></i></p>
 								<br>
 								<a href="https://arxiv.org/abs/2205.02028">arXiv</a>
@@ -451,7 +550,7 @@
 							</div>
 							<div class="grid-4">
 								<h3>BlockPlanner: City Block Generation with Vectorized Graph Representation</h3>
-								<p>Linning Xu<sup>*</sup>, Yuanbo Xiangli<sup>*</sup>, Anyi Rao, Nanxuan Zhao, Bo Dai, Ziwei Liu, Dahua Lin</p>
+								<p>Linning Xu<sup>*</sup>, Yuanbo Xiangli<sup>*</sup>, Anyi Rao, <strong>Nanxuan Zhao</strong>, Bo Dai, Ziwei Liu, Dahua Lin</p>
 								<p><i>International Conference on Computer Vision (ICCV), 2021</i></p>
 								<br>
 								<a href="./projects/BlockPlanner/BlockPlanner_ICCV_2021_paper.pdf">Paper</a>
@@ -468,7 +567,7 @@
 							</div>
 							<div class="grid-4">
 								<h3>Selective Region-based Photo Color Adjustment for Graphic Designs</h3>
-								<p>Nanxuan Zhao, Quanlong Zheng, Jing Liao, Ying Cao, Hanspeter Pfister, Rynson W. H. Lau</p>
+								<p><strong>Nanxuan Zhao</strong>, Quanlong Zheng, Jing Liao, Ying Cao, Hanspeter Pfister, Rynson W. H. Lau</p>
 								<p><i>ACM Transactions on Graphics (presented at SIGGRAPH 2021 and VIS 2021)</i></p>
 								<br>
 								<a href="./projects/GD_recolor/Graphic_Design_Recolor_TOG21_zhao.pdf">PDF</a>
@@ -519,7 +618,7 @@
 							</div>
 							<div class="grid-4">
 								<h3>How Much Time Do You Have? Modeling Multi-duration Saliency</h3>
-								<p>Camilo Fosco<sup>*</sup>, Anelise Newman<sup>*</sup>, Pat Sukhum, Yun Bin Zhang, Nanxuan Zhao, Aude Oliva, Zoya Bylinskii</p>
+								<p>Camilo Fosco<sup>*</sup>, Anelise Newman<sup>*</sup>, Pat Sukhum, Yun Bin Zhang, <strong>Nanxuan Zhao</strong>, Aude Oliva, Zoya Bylinskii</p>
 								<p><i>Computer Vision and Pattern Recognition (CVPR), 2020</i></p>
 								<br>
 								<a href="./projects/multi-duration/CVPR20_multi-duration.pdf">PDF</a>
@@ -536,7 +635,7 @@
 							</div>
 							<div class="grid-4">
 								<h3>Exploring Visual Information Flows in Infographics</h3>
-								<p>Min Lu, Chufeng Wang, Joel Lanir, Nanxuan Zhao, Hanspeter Pfister, Daniel Cohen-Or, Hui Huang</p>
+								<p>Min Lu, Chufeng Wang, Joel Lanir, <strong>Nanxuan Zhao</strong>, Hanspeter Pfister, Daniel Cohen-Or, Hui Huang</p>
 								<p><i>ACM Conference on Human Factors in Computing Systems (CHI), 2020</i></p>
 								<br>
 								<a href="./projects/VIF/CHI20_VIF.pdf">PDF</a>
@@ -554,7 +653,7 @@
 							</div>
 							<div class="grid-4">
 								<h3>ICONATE: Automatic Compound Icon Generation and Ideation</h3>
-								<p>Nanxuan Zhao, Nam Wook Kim, Laura Mariah Herman, Hanspeter Pfister, Rynson W.H. Lau, Jose Echevarria, Zoya Bylinskii</p>
+								<p><strong>Nanxuan Zhao</strong>, Nam Wook Kim, Laura Mariah Herman, Hanspeter Pfister, Rynson W.H. Lau, Jose Echevarria, Zoya Bylinskii</p>
 								<p><i>ACM Conference on Human Factors in Computing Systems (CHI), 2020</i></p>
 								<br>
 								<a href="./projects/ICONATE/CHI2020_ICONATE.pdf">PDF</a>
@@ -571,7 +670,7 @@
 							</div>
 							<div class="grid-4">
 								<h3>Modeling Fonts in Context: Font Prediction on Web Designs</h3>
-								<p>Nanxuan Zhao, Ying Cao, Rynson W.H. Lau</p>
+								<p><strong>Nanxuan Zhao</strong>, Ying Cao, Rynson W.H. Lau</p>
 								<p><i>Computer Graphics Forum (Proc. Pacific Graphics 2018)</i></p>
 								<br>
 								<a href="./projects/font_in_context/Font_in_Context_PG18_zhao.pdf">PDF</a>
@@ -588,7 +687,7 @@
 							</div>
 							<div class="grid-4">
 								<h3>What Characterizes Personalities of Graphic Designs?</h3>
-								<p>Nanxuan Zhao, Ying Cao, Rynson W.H. Lau</p>
+								<p><strong>Nanxuan Zhao</strong>, Ying Cao, Rynson W.H. Lau</p>
 								<p><i>ACM Transactions on Graphics (Proc. SIGGRAPH 2018)</i></p>
 								<br>
 								<a href="./projects/design_personality/Graphic_Design_Personality_SIG18_zhao.pdf">PDF</a>
@@ -609,7 +708,7 @@
 					<br>
 					<br>
 					<ul>
-						<img src="img/experience.jpg" style="display: inline-block; vertical-align: middle;"> 
+						<img src="img/experience2.png" style="display: inline-block; vertical-align: middle;"> 
 					</ul>
 			</div>
 			<br>
@@ -618,7 +717,7 @@
 		<!--Footer-->
 		<footer class="center">
 			<hr>
-			<span>&copy; Nanxuan Zhao | Last updated: May 2024</span>
+			<span>&copy; Nanxuan Zhao | Last updated: June 2025</span>
 		</footer>
 		
 	</div><!-- End Container -->
