add tech report

--- a/index.html
+++ b/index.html
@@ -162,6 +162,24 @@
 							</div>
 						</div>
 					</div>
+					<div class="container publication-item" data-tags="vedit genai">
+						<div class="row">
+							<div class="grid-2" style="height:200px; line-height:200px; ">
+								<img src="img/sugar.gif" style="display: inline-block; vertical-align: middle;">
+							</div>
+							<div class="grid-4">
+								<h3>SUGAR: Subject-Driven Video Customization in a Zero-Shot Manner</h3>
+								<p>Yufan Zhou, Ruiyi Zhang, Jiuxiang Gu, <strong>Nanxuan Zhao</strong>, Jing Shi, Tong Sun</p>
+								<div class="paper-tags">
+									<span class="tag vedit">Video Editing</span>
+									<span class="tag genai">GenAI</span>
+								</div>
+								<br>
+								<a href="https://yufanzhou.com/SUGAR/">Project</a>
+								<a href="https://arxiv.org/abs/2412.10533">arXiv (Tech Report)</a>
+							</div>
+						</div>
+					</div>
 					<div class="container publication-item" data-tags="ie genai">
 						<div class="row">
 							<div class="grid-2" style="height:200px; line-height:200px; ">
