--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
 						<div class="grid-4">
 							
 							<p style=" text-align:left;">
-								I  am a Research Scientist at <a href="https://research.adobe.com">Adobe Research</a> (<a href="https://research.adobe.com/news/building-technologies-to-help-people-express-their-creativity/">A cute chat 💬</a>). I was previously an Assistant Professor in the <a href="https://www.bath.ac.uk/departments/department-of-computer-science/">Department of Computer Science</a>, <a href="https://www.bath.ac.uk/">University of Bath</a>, and fortunate to work as a Postdoctoral Researcher at  <a href="http://mmlab.ie.cuhk.edu.hk">MMLab@The Chinese University of Hong Kong</a>, advised by <a href='http://dahua.site'>Prof. Dahua Lin</a>. I received my Ph.D. degree from the Department of Computer Science, <a href="http://www.cityu.edu.hk/">City University of Hong Kong</a> under the supervision of <a href="http://www.cs.cityu.edu.hk/~rynson/"> Prof. Rynson W.H. Lau</a>. During my Ph.D. study, I was lucky to be a visiting scholar at <a href="https://vcg.seas.harvard.edu">VCG@Harvard University</a> under the supervision of <a href="https://www.seas.harvard.edu/person/hanspeter-pfister"> Prof. Hanspeter Pfister</a>, and closely collaborated with <a href="https://research.adobe.com/person/zoya-bylinskii/"> Zoya Bylinskii </a> from Adobe Research. I was also lucky to work with <a href="https://scholar.google.com/citations?user=c3PYmxUAAAAJ&hl=en"> Steve Lin </a> and <a href="https://scholar.google.com/citations?user=lH4zgcIAAAAJ&hl=en"> Zhirong Wu </a> as an intern at Microsoft Research Asia (MSRA).
+								I  am a Research Scientist at <a href="https://research.adobe.com">Adobe Research</a> (<a href="https://research.adobe.com/news/building-technologies-to-help-people-express-their-creativity/">A cute official chat 💬</a>). I was previously an Assistant Professor in the <a href="https://www.bath.ac.uk/departments/department-of-computer-science/">Department of Computer Science</a>, <a href="https://www.bath.ac.uk/">University of Bath</a>.
+								During my study, I was fortunate to work with <a href="https://scholar.google.com/citations?user=3M9mssIAAAAJ&hl=en"> Zoya Bylinskii </a>, <a href="http://www.cs.cityu.edu.hk/~rynson/"> Prof. Rynson W.H. Lau</a>, <a href='http://dahua.site'>Prof. Dahua Lin</a>, <a href="https://scholar.google.com/citations?user=c3PYmxUAAAAJ&hl=en"> Steve Lin </a>, <a href="https://www.seas.harvard.edu/person/hanspeter-pfister"> Prof. Hanspeter Pfister</a>, and <a href="https://scholar.google.com/citations?user=lH4zgcIAAAAJ&hl=en"> Zhirong Wu </a>.   
+								<br>
+								<br>
+								At Adobe, I initiated and led the instruction-based image editing research, which has been adopted in <a href="https://firefly.adobe.com/">Adobe Products</a>. And 30 patents have been filed/published until end of 2025.
 								<br>
 								<br>
 								My research lies in the areas of computer graphics, computer vision/machine learning, and human-computer interaction.
@@ -45,6 +49,7 @@
 								<br>
 								<br>
 								<span style="color:red">We are actively looking for research interns. If you are interested in doing research project(s) at Adobe or remote collaboration with me, please drop me an email with your CV.</span>
+								
 								<br>
 								<br>
 							</p>
@@ -104,7 +109,65 @@
 						</div>
 					</div>
 
-
+					<div class="container publication-item" data-tags="genai ie">
+						<div class="row">
+							<div class="grid-2" style="height:200px; line-height:200px; ">
+								<img src="img/xplanner_aaai26.png" style="display: inline-block; vertical-align: middle;">
+							</div>
+							<div class="grid-4">
+								<h3>Beyond Simple Edits: X-Planner for Complex Instruction-Based Image Editing</h3>
+								<p>Chun-Hsiao Yeh, Yilin Wang, <strong>Nanxuan Zhao</strong>, Richard Zhang, Yuheng Li, Yi Ma, Krishna kumar Singh</p>
+								<p><i>AAAI Conference on Artificial Intelligence (AAAI), 2026</i></p>
+								<div class="paper-tags">
+									<span class="tag genai">GenAI</span>
+									<span class="tag ie">Image Editing</span>
+								</div>
+								<br>
+								<a href="https://danielchyeh.github.io/x-planner/">Project</a>
+								<a href="https://arxiv.org/abs/2507.05259">arXiv</a>
+							</div>
+						</div>
+					</div>
+					<div class="container publication-item" data-tags="genai vector threed">
+						<div class="row">
+							<div class="grid-2" style="height:200px; line-height:200px; ">
+								<img src="img/BS_neurips25.png" style="display: inline-block; vertical-align: middle;">
+							</div>
+							<div class="grid-4">
+								<h3>Bézier Splatting for Fast and Differentiable Vector Graphics Rendering</h3>
+								<p>Xi Liu, Chaoyi Zhou, <strong>Nanxuan Zhao</strong>, Siyu Huang</p>
+								<p><i>Conference on Neural Information Processing Systems (NeurIPS), 2026</i></p>
+								<div class="paper-tags">
+									<span class="tag genai">GenAI</span>
+									<span class="tag vector">Vector Graphics</span>
+									<span class="tag threed">NeRF/GS/3D</span>
+								</div>
+								<br>
+								<a href="https://xiliu8006.github.io/Bezier_splatting_project/">Project</a>
+								<a href="https://arxiv.org/abs/2503.16424">arXiv</a>
+							</div>
+						</div>
+					</div>
+					<div class="container publication-item" data-tags="genai gd">
+						<div class="row">
+							<div class="grid-2" style="height:200px; line-height:200px; ">
+								<img src="img/layergd_iccv25.png" style="display: inline-block; vertical-align: middle;">
+							</div>
+							<div class="grid-4">
+								<h3>Rethinking Layered Graphic Design Generation with a Top-Down Approach</h3>
+								<p>Jingye Chen, Zhaowen Wang, <strong>Nanxuan Zhao</strong>, Li Zhang, Difan Liu, Jimei Yang, Qifeng Chen</p>
+								<p><i>International Conference on Computer Vision (ICCV), 2025</i></p>
+								<div class="paper-tags">
+									<span class="tag genai">GenAI</span>
+									<span class="tag gd">Graphic Design</span>
+								</div>
+								<br>
+								<a href="https://jingyechen.github.io/accordion/">Project</a>
+								<a href="https://arxiv.org/abs/2507.05601">arXiv</a>
+								<a href="https://www.youtube.com/watch?v=2W2h5ukgEf4">Presentation</a>
+							</div>
+						</div>
+					</div>
 					<div class="container publication-item" data-tags="genai threed ie">
 						<div class="row">
 							<div class="grid-2" style="height:200px; line-height:200px; ">
@@ -829,7 +892,7 @@
 		<!--Footer-->
 		<footer class="center">
 			<hr>
-			<span>&copy; Nanxuan Zhao | Last updated: June 2025</span>
+			<span>&copy; Nanxuan Zhao | Last updated: Nov 2025</span>
 		</footer>
 		
 	</div><!-- End Container -->
